--- a/app/views/uploaded_yamls/show.html.haml
+++ b/app/views/uploaded_yamls/show.html.haml
@@ -7,12 +7,11 @@
       = f.submit class: "btn btn-default"
   .row
     - @tree.each_with_index do |state, i|
-      .col-xs-6.col-md-3.col-xl-2
+      .col-xs-4.col-md-3.col-xl-2
         .panel.panel-default.page-break-inside-avoid
           .panel-heading #{i + 1}.
-          .panel-body
-            %table.table.table-striped.table-responsive
-              - state.each_with_index do |val, index|
-                %tr
-                  %th= @tree.keys[index]
-                  %td= val
+          %table.table.table-striped
+            - state.each_with_index do |val, index|
+              %tr
+                %th= @tree.keys[index]
+                %td= val
