--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,5 +16,8 @@
 
 @import bootstrap
 
+.page-break-after-always
+  page-break-after: always
+
 .page-break-inside-avoid
   page-break-inside: avoid
